docs: resolve 1-38 (1.11.0-SNAPSHOT published to jfrog) and log the first Tomcat 11 deployment
Tracker 1-38 -> resolved, option (a): 1.11.0-SNAPSHOT is on libs-snapshot as of
2026-09-10 (snapshot 1.11.0-20260910.185426-1; manifest Implementation-Sha
f35c55964d, Build-Number: Manual). Records the three consequences -- plugin
authors no longer need to build core; it is a manual point-in-time publish so
1-13 (CI flip) stays open; it is the library jar, jfrog has never hosted WARs --
and a method note that Artifactory's search API returns [] anonymously even for
artifacts that exist (positive-controlled).

tomcat11-upgrade-plan: status update, A-4 and A-7 rows, sequencing note, and a
new "dave-tc11 deployment log (2026-09-16)" section parallel to the A-1 scout
log. First XNAT-on-Tomcat-11 outside a container: 11.0.26 from a verified Apache
tarball, WAR built at f35c55964d, 22 jakarta plugins, existing 1.10 DB reused,
Artemis 2.40 broker. 0 across all failure signatures, 35 init tasks incl. the
1-20 tell, A-4 connector setting verified on the box (1,500-param POST -> 200).
Residual errors attributed by timestamp against the cutover; none from Tomcat 11.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_017sEf45Exu7Go8xZW5N1yag